lib/src/raft.h

struct bop_raft_buffer;
struct bop_raft_cluster_config_ptr;
struct bop_raft_srv_config_ptr;
struct bop_raft_srv_config_vec;
struct bop_raft_params {
    int32_t election_timeout_upper_bound;
    int32_t election_timeout_lower_bound;
    int32_t heart_beat_interval;
    int32_t rpc_failure_backoff;
    int32_t log_sync_batch_size;
    int32_t log_sync_stop_gap;
    int32_t snapshot_distance;
    int32_t snapshot_block_size;
    int32_t snapshot_sync_ctx_timeout;
    bool enable_randomized_snapshot_creation;
    int32_t max_append_size;
    int32_t reserved_log_items;
    int32_t client_req_timeout;
    int32_t fresh_log_gap;
    int32_t stale_log_gap;
    int32_t custom_commit_quorum_size;
    int32_t custom_election_quorum_size;
    int32_t leadership_expiry;
    int32_t leadership_transfer_min_wait_time;
    bool allow_temporary_zero_priority_leader;
    bool auto_forwarding;
    int32_t auto_forwarding_max_connections;
    bool use_bg_thread_for_urgent_commit;
    bool exclude_snp_receiver_from_quorum;
    bool auto_adjust_quorum_for_small_cluster;
    enum bop_raft_params_locking_method_type locking_method_type;
    enum bop_raft_params_return_method_type return_method;
    int32_t auto_forwarding_req_timeout;
    int32_t grace_period_of_lagging_state_machine;
    bool use_new_joiner_type;
    bool use_bg_thread_for_snapshot_io;
    bool use_full_consensus_among_healthy_members;
    bool track_peers_sm_commit_idx;
    bool parallel_log_appending;
    int32_t max_log_gap_in_stream;
    int64_t max_bytes_in_flight_in_stream;
};
struct bop_raft_counter;
struct bop_raft_gauge;
struct bop_raft_histogram;
struct bop_raft_server_peer_info {
    int32_t id;
    uint64_t last_log_idx;
    uint64_t last_succ_resp_us;
};
struct bop_raft_server_peer_info_vec;
struct bop_raft_server;
BOP_API void bop_raft_server_broadcast_priority_change(
    struct bop_raft_server *rs,
    const int32_t srv_id,
    const int32_t new_priority
);
BOP_API void
bop_raft_server_yield_leadership(
    struct bop_raft_server *rs,
    bool immediate_yield,
    int32_t successor_id
);
BOP_API bool bop_raft_server_request_leadership(struct bop_raft_server *rs);
BOP_API void bop_raft_server_restart_election_timer(struct bop_raft_server *rs);
BOP_API void bop_raft_server_set_user_ctx(struct bop_raft_server *rs, const char *data, size_t size);
BOP_API struct bop_raft_buffer *bop_raft_server_get_user_ctx(struct bop_raft_server *rs);
BOP_API int32_t bop_raft_server_get_snapshot_sync_ctx_timeout(const struct bop_raft_server *rs);
BOP_API int32_t bop_raft_server_get_id(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_term(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_log_term(const struct bop_raft_server *rs, uint64_t log_idx);
BOP_API uint64_t bop_raft_server_get_last_log_term(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_last_log_idx(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_committed_log_idx(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_target_committed_log_idx(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_leader_committed_log_idx(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_log_idx_at_becoming_leader(const struct bop_raft_server *rs);
BOP_API uint64_t bop_raft_server_get_expected_committed_log_idx(const struct bop_raft_server *rs);
BOP_API void
bop_raft_server_get_config(const struct bop_raft_server *rs, struct bop_raft_cluster_config_ptr *cluster_config);
BOP_API int32_t bop_raft_server_get_dc_id(const struct bop_raft_server *rs, int32_t srv_id);
BOP_API struct bop_raft_buffer *bop_raft_server_get_aux(const struct bop_raft_server *rs, int32_t srv_id);
BOP_API int32_t bop_raft_server_get_leader(const struct bop_raft_server *rs);
BOP_API bool bop_raft_server_is_leader(const struct bop_raft_server *rs);
BOP_API bool bop_raft_server_is_leader_alive(const struct bop_raft_server *rs);
BOP_API void bop_raft_server_get_srv_config(
    const struct bop_raft_server *rs, struct bop_raft_srv_config_ptr *svr_config, int32_t srv_id
);
BOP_API void
bop_raft_server_get_srv_config_all(const struct bop_raft_server *rs, struct bop_raft_srv_config_vec *configs_out);
BOP_API void
bop_raft_server_update_srv_config(struct bop_raft_server *rs, struct bop_raft_srv_config_ptr *new_config);
BOP_API bool
bop_raft_server_get_peer_info(struct bop_raft_server *rs, int32_t srv_id, struct bop_raft_server_peer_info *peer);
BOP_API void bop_raft_server_get_peer_info_all(
    const struct bop_raft_server *rs, struct bop_raft_server_peer_info_vec *peers_out
);
BOP_API void bop_raft_server_shutdown(struct bop_raft_server *rs);
BOP_API void bop_raft_server_start_server(struct bop_raft_server *rs, bool skip_initial_election_timeout);
BOP_API void bop_raft_server_stop_server(struct bop_raft_server *rs);
BOP_API void bop_raft_server_send_reconnect_request(struct bop_raft_server *rs);
BOP_API void bop_raft_server_update_params(struct bop_raft_server *rs, struct bop_raft_params *params);
BOP_API void bop_raft_server_get_current_params(const struct bop_raft_server *rs, struct bop_raft_params *params);
BOP_API uint64_t bop_raft_server_get_stat_counter(struct bop_raft_server *rs, struct bop_raft_counter *counter);
BOP_API int64_t bop_raft_server_get_stat_gauge(struct bop_raft_server *rs, struct bop_raft_gauge *gauge);
BOP_API bool bop_raft_server_get_stat_histogram(struct bop_raft_server *rs, struct bop_raft_histogram *histogram);
BOP_API void bop_raft_server_reset_counter(struct bop_raft_server *rs, struct bop_raft_counter *counter);
BOP_API void bop_raft_server_reset_gauge(struct bop_raft_server *rs, struct bop_raft_gauge *gauge);
BOP_API void bop_raft_server_reset_histogram(struct bop_raft_server *rs, struct bop_raft_histogram *histogram);
BOP_API void bop_raft_server_reset_all_stats(struct bop_raft_server *rs);