lib/src/uws.h


typedef void* uws_res_t;
BOP_API void uws_res_on_writable(uws_res_t res, void* user_data, bool (*handler)(uws_res_t res, void* user_data, uint64_t m));