rust/bop-rs/src/bindings.rs

unsafe extern "C" {
    #[doc = " Broadcast the priority change of given server to all peers. This function should be used\n only when there is no live leader and leader election is blocked by priorities of live\n followers. In that case, we are not able to change priority by using normal `set_priority`\n operation.\n\n @param rs local bop_raft_server instance\n @param srv_id ID of server to update\n priority.\n @param new_priority New priority."]
    pub fn bop_raft_server_broadcast_priority_change(
        rs: *mut bop_raft_server,
        srv_id: i32,
        new_priority: i32,
    );
}
unsafe extern "C" {
    #[doc = " Yield current leadership and becomes a follower. Only a leader will accept this\n\n If given `immediate_yield` flag is `true`, it will become a follower immediately.\n The subsequent leader election will be totally random so that there is always a\n chance that this server becomes the next leader again.\n\n Otherwise, this server will pause write operations first, wait until the successor\n (except for this server) finishes the catch-up of the latest log, and then resign.\n In such a case, the next leader will be much more predictable.\n\n Users can designate the successor. If not given, this API will automatically choose\n the highest priority server as a successor.\n\n @param rs local bop_raft_server instance\n @param immediate_yield If `true`, yield immediately.\n @param successor_id The server ID of the successor.\n                     If `-1`, the successor will be chosen automatically."]
    pub fn bop_raft_server_yield_leadership(
        rs: *mut bop_raft_server,
        immediate_yield: bool,
        successor_id: i32,
    );
}
unsafe extern "C" {
    #[doc = " Send a request to the current leader to yield its leadership,\n and become the next leader.\n\n *\n @return `true` on success. But it does not guarantee to become\n         the next leader due to various failures."]
    pub fn bop_raft_server_request_leadership(rs: *mut bop_raft_server) -> bool;
}
unsafe extern "C" {
    #[doc = " Start the election timer on this server, if this server is a follower. It will\n allow the election timer permanently, if it was disabled by state manager."]
    pub fn bop_raft_server_restart_election_timer(rs: *mut bop_raft_server);
}
unsafe extern "C" {
    #[doc = " Set custom context to Raft cluster config. It will create a new configuration log and\n replicate it.\n\n @param ctx Custom context."]
    pub fn bop_raft_server_set_user_ctx(
        rs: *mut bop_raft_server,
        data: *const ::std::os::raw::c_char,
        size: usize,
    );
}
unsafe extern "C" {
    #[doc = " Get custom context from the current cluster config.\n\n @return Custom context."]
    pub fn bop_raft_server_get_user_ctx(rs: *mut bop_raft_server) -> *mut bop_raft_buffer;
}
unsafe extern "C" {
    #[doc = " Get timeout for snapshot_sync_ctx\n\n @return snapshot_sync_ctx_timeout."]
    pub fn bop_raft_server_get_snapshot_sync_ctx_timeout(rs: *const bop_raft_server) -> i32;
}
unsafe extern "C" {
    #[doc = " Get ID of this server.\n\n @return Server ID."]
    pub fn bop_raft_server_get_id(rs: *const bop_raft_server) -> i32;
}
unsafe extern "C" {
    #[doc = " Get the current term of this server.\n\n @return Term."]
    pub fn bop_raft_server_get_term(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the term of given log index number.\n\n @param log_idx Log index number\n @return Term of given log."]
    pub fn bop_raft_server_get_log_term(rs: *const bop_raft_server, log_idx: u64) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the term of the last log.\n\n @return Term of the last log."]
    pub fn bop_raft_server_get_last_log_term(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the last log index number.\n\n @return Last log index number."]
    pub fn bop_raft_server_get_last_log_idx(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the last committed log index number of state machine.\n\n @return Last committed log index number of state machine."]
    pub fn bop_raft_server_get_committed_log_idx(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the target log index number we are required to commit.\n\n @return Target committed log index number."]
    pub fn bop_raft_server_get_target_committed_log_idx(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the leader's last committed log index number.\n\n @return The leader's last committed log index number."]
    pub fn bop_raft_server_get_leader_committed_log_idx(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the log index of the first config when this server became a leader.\n This API can be used for checking if the state machine is fully caught up\n with the latest log after a leader election, so that the new leader can\n guarantee strong consistency.\n\n It will return 0 if this server is not a leader.\n\n @return The log index of the first config when this server became a leader."]
    pub fn bop_raft_server_get_log_idx_at_becoming_leader(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Calculate the log index to be committed from current peers' matched indexes.\n\n @return Expected committed log index."]
    pub fn bop_raft_server_get_expected_committed_log_idx(rs: *const bop_raft_server) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the current Raft cluster config.\n\n @param rs raft server instance\n @param cluster_config Wrapper for holding nuraft::ptr<nuraft::cluster_config>"]
    pub fn bop_raft_server_get_config(
        rs: *const bop_raft_server,
        cluster_config: *mut bop_raft_cluster_config_ptr,
    );
}
unsafe extern "C" {
    #[doc = " Get data center ID of the given server.\n\n @param srv_id Server ID.\n @return -1 if given server ID does not exist.\n          0 if data center ID was not assigned."]
    pub fn bop_raft_server_get_dc_id(rs: *const bop_raft_server, srv_id: i32) -> i32;
}
unsafe extern "C" {
    #[doc = " Get auxiliary context stored in the server config.\n\n @param srv_id Server ID.\n @return\n Auxiliary context."]
    pub fn bop_raft_server_get_aux(rs: *const bop_raft_server, srv_id: i32)
    -> *mut bop_raft_buffer;
}
unsafe extern "C" {
    #[doc = " Get the ID of current leader.\n\n @return Leader ID\n         -1 if there is no live leader."]
    pub fn bop_raft_server_get_leader(rs: *const bop_raft_server) -> i32;
}
unsafe extern "C" {
    #[doc = " Check if this server is leader.\n\n @return `true` if it is leader."]
    pub fn bop_raft_server_is_leader(rs: *const bop_raft_server) -> bool;
}
unsafe extern "C" {
    #[doc = " Check if there is live leader in the current cluster.\n\n @return `true` if live leader exists."]
    pub fn bop_raft_server_is_leader_alive(rs: *const bop_raft_server) -> bool;
}
unsafe extern "C" {
    #[doc = " Get the configuration of given server.\n\n @param srv_id Server ID.\n @return Server configuration."]
    pub fn bop_raft_server_get_srv_config(
        rs: *const bop_raft_server,
        svr_config: *mut bop_raft_srv_config_ptr,
        srv_id: i32,
    );
}
unsafe extern "C" {
    #[doc = " Get the configuration of all servers.\n\n @param[out] configs_out Set of server configurations."]
    pub fn bop_raft_server_get_srv_config_all(
        rs: *const bop_raft_server,
        configs_out: *mut bop_raft_srv_config_vec,
    );
}
unsafe extern "C" {
    #[doc = " Update the server configuration, only leader will accept this operation.\n This function will update the current cluster config and replicate it to all peers.\n\n We don't allow changing multiple server configurations at once, due to safety reason.\n\n Change on endpoint will not be accepted (should be removed and then re-added).\n If the server is in new joiner state, it will be rejected.\n If the server ID does not exist, it will also be rejected.\n\n @param new_config Server configuration to update.\n @return `true` on success, `false` if rejected."]
    pub fn bop_raft_server_update_srv_config(
        rs: *mut bop_raft_server,
        new_config: *mut bop_raft_srv_config_ptr,
    );
}
unsafe extern "C" {
    #[doc = " Get the peer info of the given ID. Only leader will return peer info.\n\n @param srv_id Server ID\n @return Peer info"]
    pub fn bop_raft_server_get_peer_info(
        rs: *mut bop_raft_server,
        srv_id: i32,
        peer: *mut bop_raft_server_peer_info,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Get the info of all peers. Only leader will return peer info.\n\n @return Vector of peer\n info."]
    pub fn bop_raft_server_get_peer_info_all(
        rs: *const bop_raft_server,
        peers_out: *mut bop_raft_server_peer_info_vec,
    );
}
unsafe extern "C" {
    #[doc = " Shut down server instance."]
    pub fn bop_raft_server_shutdown(rs: *mut bop_raft_server);
}
unsafe extern "C" {
    #[doc = "  Start internal background threads, initialize election"]
    pub fn bop_raft_server_start_server(
        rs: *mut bop_raft_server,
        skip_initial_election_timeout: bool,
    );
}
unsafe extern "C" {
    #[doc = " Stop background commit thread."]
    pub fn bop_raft_server_stop_server(rs: *mut bop_raft_server);
}
unsafe extern "C" {
    #[doc = " Send reconnect request to leader. Leader will re-establish the connection to this server\n in a few seconds. Only follower will accept this operation."]
    pub fn bop_raft_server_send_reconnect_request(rs: *mut bop_raft_server);
}
unsafe extern "C" {
    #[doc = " Update Raft parameters.\n\n @param new_params Parameters to set."]
    pub fn bop_raft_server_update_params(rs: *mut bop_raft_server, params: *mut bop_raft_params);
}
unsafe extern "C" {
    #[doc = " Get the current Raft parameters. Returned instance is the clone of the original one,\n so that user can modify its contents.\n\n @return Clone of Raft parameters."]
    pub fn bop_raft_server_get_current_params(
        rs: *const bop_raft_server,
        params: *mut bop_raft_params,
    );
}
unsafe extern "C" {
    #[doc = " Get the counter number of given stat name.\n\n @param name Stat name to retrieve.\n\n @return Counter value."]
    pub fn bop_raft_server_get_stat_counter(
        rs: *mut bop_raft_server,
        counter: *mut bop_raft_counter,
    ) -> u64;
}
unsafe extern "C" {
    #[doc = " Get the gauge number of given stat name.\n\n @param name Stat name to retrieve.\n @return Gauge value."]
    pub fn bop_raft_server_get_stat_gauge(
        rs: *mut bop_raft_server,
        gauge: *mut bop_raft_gauge,
    ) -> i64;
}
unsafe extern "C" {
    #[doc = " Get the histogram of given stat name.\n\n @param name Stat name to retrieve.\n @param[out] histogram_out Histogram as a map. Key is the upper bound of a bucket, and\n             value is the counter of that bucket.\n @return `true` on success.\n         `false` if stat does not exist, or is not histogram type."]
    pub fn bop_raft_server_get_stat_histogram(
        rs: *mut bop_raft_server,
        histogram: *mut bop_raft_histogram,
    ) -> bool;
}
unsafe extern "C" {
    #[doc = " Reset given stat to zero.\n\n @param name Stat name to reset."]
    pub fn bop_raft_server_reset_counter(rs: *mut bop_raft_server, counter: *mut bop_raft_counter);
}
unsafe extern "C" {
    #[doc = " Reset given stat to zero.\n\n @param name Stat name to reset."]
    pub fn bop_raft_server_reset_gauge(rs: *mut bop_raft_server, gauge: *mut bop_raft_gauge);
}
unsafe extern "C" {
    #[doc = " Reset given stat to zero.\n\n @param name Stat name to reset."]
    pub fn bop_raft_server_reset_histogram(
        rs: *mut bop_raft_server,
        histogram: *mut bop_raft_histogram,
    );
}
unsafe extern "C" {
    #[doc = " Reset all existing stats to zero."]
    pub fn bop_raft_server_reset_all_stats(rs: *mut bop_raft_server);
}
